--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ header .circles {
   -webkit-appearance: none;
   appearance: none;
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background-color: #10d5c2;
   background-image: url("images/icon-slider.svg");
   background-repeat: no-repeat;
@@ -123,8 +123,8 @@ header .circles {
   -webkit-appearance: none;
   appearance: none;
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background-color: #10d5c2;
   background-image: url("images/icon-slider.svg");
   background-repeat: no-repeat;
@@ -264,14 +264,24 @@ input:checked + .toogle:before {
 }
 
 @media (max-width: 600px) {
+  .fullpage {
+    height: 100vh;
+    min-height: 100vh;
+  }
+
   header {
     position: relative;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+  }
+
+  .container {
+    height: auto;
+    padding-top: 20%;
+    padding-bottom: 5%;
   }
 
   .frame {
-    margin-top: 20px;
-    width: 80%;
+    width: 90%;
     height: 600px;
   }
 
